sfdx-source/force-app/main/default/objects/compliancequest__SQX_CAPA__c/compliancequest__SQX_CAPA__c.object-meta.xml
<CustomObject>
    <description>Represents the Corrective/Preventive Action Request for the object</description>
    <label>CAPA</label>
    <nameField>
        <displayFormat>CAPA-{000000}</displayFormat>
        <label>CAPA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAPAs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>