sfdx-source/force-app/main/default/objects/compliancequest__SQX_CAPA__c/fields/compliancequest__CAPA_Type__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__CAPA_Type__c</fullName>
    <description>represents Supplier, Customer or Internal CAPA</description>
    <inlineHelpText>The type of CAPA which can be Customer, Internal, or Supplier (SCAR).</inlineHelpText>
    <label>CAPA Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
                <label>Customer Claim</label>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>