sfdx-source/force-app/main/default/objects/compliancequest__SQX_CAPA__c/fields/CQ_MS_Area_Level_Risk__c.field-meta.xml
<CustomField>
    <fullName>CQ_MS_Area_Level_Risk__c</fullName>
    <description>This field keeps the value of the Area-Level Risk.</description>
    <label>Area-Level Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>