sfdx-source/force-app/main/default/objects/compliancequest__SQX_CAPA__c/fields/CQ_MS_Area_Level_Risk_Description__c.field-meta.xml
<CustomField>
    <fullName>CQ_MS_Area_Level_Risk_Description__c</fullName>
    <description>This field gives the description of Area-Level Risk.</description>
    <label>Area-Level Risk Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>