sfdx-source/force-app/main/default/objects/compliancequest__SQX_CAPA__c/fields/CQ_MS_CAPA_Subtype__c.field-meta.xml
<CustomField>
    <fullName>CQ_MS_CAPA_Subtype__c</fullName>
    <label>CAPA Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>compliancequest__CAPA_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CAPA_Subtype</valueSetName>
    </valueSet>
</CustomField>