sfdx-source/force-app/main/default/objects/compliancequest__SQX_CAPA__c/fields/CQ_MS_Corporate_Level_Risk__c.field-meta.xml
<CustomField>
    <fullName>CQ_MS_Corporate_Level_Risk__c</fullName>
    <description>This field gives the value for the Corporate-Level Risk.</description>
    <label>Corporate-Level Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>