sfdx-source/force-app/main/default/objects/compliancequest__SQX_CAPA__c/fields/CQ_MS_Need_Risk_Analysis__c.field-meta.xml
<CustomField>
    <fullName>CQ_MS_Need_Risk_Analysis__c</fullName>
    <description>This field gives the value for the need of Risk Analysis or not.</description>
    <label>Need Risk Analysis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No / Not Needed</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>