sfdx-source/force-app/main/default/objects/compliancequest__SQX_CAPA__c/fields/CQ_MS_Process_Level_Risk_FMEA__c.field-meta.xml
<CustomField>
    <fullName>CQ_MS_Process_Level_Risk_FMEA__c</fullName>
    <description>This field gives the value for Process-Level Risk (FMEA).</description>
    <label>Process-Level Risk (FMEA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>